@@ -776,7 +776,8 @@ class Bbox(BboxBase):
     def update_from_data(self, x, y, ignore=None):
         """
         Update the bounds of the :class:`Bbox` based on the passed in
-        data.
+        data.  After updating, the bounds will have positive *width*
+        and *height*; *x0* and *y0* will be the minimal values.
 
         *x*: a numpy array of *x*-values
 
@@ -791,10 +792,11 @@ class Bbox(BboxBase):
         xy = np.hstack((x.reshape((len(x), 1)), y.reshape((len(y), 1))))
         return self.update_from_data_xy(xy, ignore)
 
-    def update_from_path(self, path, ignore=None):
+    def update_from_path(self, path, ignore=None, updatex=True, updatey=True):
         """
         Update the bounds of the :class:`Bbox` based on the passed in
-        data.
+        data.  After updating, the bounds will have positive *width*
+        and *height*; *x0* and *y0* will be the minimal values.
 
         *path*: a :class:`~matplotlib.path.Path` instance
 
@@ -802,6 +804,10 @@ class Bbox(BboxBase):
            - when True, ignore the existing bounds of the :class:`Bbox`.
            - when False, include the existing bounds of the :class:`Bbox`.
            - when None, use the last value passed to :meth:`ignore`.
+
+        *updatex*: when True, update the x values
+
+        *updatey*: when True, update the y values
         """
         if ignore is None:
             ignore = self._ignore
@@ -813,15 +819,20 @@ class Bbox(BboxBase):
             path, None, self._points, self._minpos, ignore)
 
         if changed:
-            self._points = points
-            self._minpos = minpos
             self.invalidate()
+            if updatex:
+                self._points[:,0] = points[:,0]
+                self._minpos[0] = minpos[0]
+            if updatey:
+                self._points[:,1] = points[:,1]
+                self._minpos[1] = minpos[1]
 
 
-    def update_from_data_xy(self, xy, ignore=None):
+    def update_from_data_xy(self, xy, ignore=None, updatex=True, updatey=True):
         """
         Update the bounds of the :class:`Bbox` based on the passed in
-        data.
+        data.  After updating, the bounds will have positive *width*
+        and *height*; *x0* and *y0* will be the minimal values.
 
         *xy*: a numpy array of 2D points
 
@@ -829,12 +840,17 @@ class Bbox(BboxBase):
            - when True, ignore the existing bounds of the :class:`Bbox`.
            - when False, include the existing bounds of the :class:`Bbox`.
            - when None, use the last value passed to :meth:`ignore`.
+
+        *updatex*: when True, update the x values
+
+        *updatey*: when True, update the y values
         """
         if len(xy) == 0:
             return
 
         path = Path(xy)
-        self.update_from_path(path, ignore=ignore)
+        self.update_from_path(path, ignore=ignore,
+                                    updatex=updatex, updatey=updatey)
 
     def _set_x0(self, val):
         self._points[0, 0] = val
